--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,19 @@
 {
-    "short_name": "アプリだぜ",
-    "name": "PWA test tsu physics",
-    "display": "standalone",
-    "start_url": "index.html",
-    "icons": [
-        {
-            "src": "img/icon.png",
-            "sizes": "1920x1920",
-            "type": "image/png"
-        }
-    ]
+  "name": "タスク管理アプリ",
+  "icons": [
+    {
+      "src": "./img/icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./img/icon.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "start_url": "./index.html",
+  "display": "fullscreen",
+  "background_color": "#FFFFFF",
+  "theme_color": "#4e342e"
 }
